syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.routeguide";
option java_outer_classname = "RouteGuideProto";
option objc_class_prefix = "RTG";

package routeguide;

// Interface exported by the server.
service CycleStream {
  // A Bidirectional streaming RPC.
  //
  // Accepts a stream of RouteNotes sent while a route is being traversed,
  // while receiving other RouteNotes (e.g. from other users).
  rpc Stream(stream cycleTLSRequest) returns (stream Response) {}
}

// Points are represented as latitude-longitude pairs in the E7 representation
// (degrees multiplied by 10**7 and rounded to the nearest integer).
// Latitudes should be in the range +/- 90 degrees and longitude should be in
// the range +/- 180 degrees (inclusive).
message Options {
  string URL = 1;
  string Method = 2;
  string Headers = 3;
  string Body = 4;
  string Ja3 = 5;
  string UserAgent = 6;
  string Proxy = 7;
  string Cookies = 8;
}

message cycleTLSRequest {
  string RequestID = 1;
  Options Options = 2;

}

message Response {
  string RequestID  = 1;
  int32 Status = 2;
  string Body = 3;
  repeated string Headers = 4;

}